Sun Nov 16 17:57:57 GMT 2008  Chusslove Illich  <caslav.ilic@gmx.net>

	* src/manp.c (add_nls_manpath): Check that modifiers match if set
	  (Savannah patch #6658).

Wed Nov 12 12:32:17 GMT 2008  Arif E. Nugroho  <arif_endro@yahoo.com>

	* po/id.po: New from Translation Project.
	* po/LINGUAS: Add id.
	* man/THANKS: Add translator credit.

Sun Nov  9 16:23:12 GMT 2008  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Sun Oct 26 12:44:42 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (create_pathlist): Eliminate duplicates due to
	  symlinks. Reported by Mike Frysinger.
	* src/man.c (main): Emit "manpath search path" debugging message
	  before calling create_pathlist.
	* docs/NEWS: Document this.

Sun Oct 26 11:58:37 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Support LINGUAS environment variable to control installation of
	localised manual pages. Reported by Mike Frysinger.

	* m4/man-po4a.m4, m4/man-linguas.m4: New files.
	* configure.ac: Call MAN_PO4A instead of inline code. Remove NLS and
	  PO4A Automake conditionals, no longer needed. Call MAN_LINGUAS.
	* man/LINGUAS, man/LINGUAS.po4a: New files.
	* man/Makefile.am (SUBDIRS): Set to $(MAN_SUBDIRS) rather than
	  computing the list here.
	  (DIST_SUBDIRS): Add, since we no longer use Automake conditionals.
	* docs/NEWS: Document this.

Sun Oct 26 01:53:36 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check for lzma.
	* include/comp_src.h.in (comp_list): Add lzma.
	* include/manconfig.h.in: Define UNLZMA.
	* docs/NEWS: Document this.

Wed Oct  1 12:19:29 BST 2008  Colin Watson  <cjwatson@debian.org>

	* docs/TODO: Remove entry about Berkeley DB's error handling, fixed
	  in Berkeley DB 4.1 (see http://bugs.debian.org/180379).

Tue Sep 30 16:39:19 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Add Norwegian Bokmål and
	  Norwegian Nynorsk (following a comment on