@@ -1,3 +1,10 @@
+Sun Nov 16 18:00:23 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (main), src/whatis.c (main): Tokenise LANGUAGE properly
+	  rather than only taking the first two characters of each entry.
+	  Based on a suggestion from Chusslove Illich in Savannah patch
+	  #6658.
+
 Sun Nov 16 17:57:57 GMT 2008  Chusslove Illich  <caslav.ilic@gmx.net>
 
 	* src/manp.c (add_nls_manpath): Check that modifiers match if set
